tests/baselines/reference/callWithSpread2.errors.txt
callWithSpread2.ts(23,13): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
callWithSpread2.ts(24,7): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
callWithSpread2.ts(27,5): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
  Type 'string' is not assignable to type 'number'.
callWithSpread2.ts(28,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
callWithSpread2.ts(29,13): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
  Type 'string' is not assignable to type 'number'.
callWithSpread2.ts(30,13): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
callWithSpread2.ts(31,11): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
  Type 'string' is not assignable to type 'number'.
callWithSpread2.ts(32,11): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
callWithSpread2.ts(33,8): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
callWithSpread2.ts(34,8): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
callWithSpread2.ts(35,8): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
callWithSpread2.ts(36,14): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.


==== callWithSpread2.ts (12 errors) ====
    declare function all(a?: number, b?: number): void;
    declare function weird(a?: number | string, b?: number | string): void;
    declare function prefix(s: string, a?: number, b?: number): void;
    declare function rest(s: string, a?: number, b?: number,  ...rest: number[]): void;
    declare function normal(s: string): void;
    declare function thunk(): string;
    declare function prefix2(s: string, n: number, a?: number, b?: number): void;
    
    declare var ns: number[];
    declare var mixed: (number | string)[];
    declare var tuple: [number, string];
    
    // good
    all(...ns)
    weird(...ns)
    weird(...mixed)
    weird(...tuple)
    prefix("a", ...ns)
    rest("d", ...ns)
    
    
    // extra arguments
    normal("g", ...ns)
                ~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    thunk(...ns)
          ~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    
    // bad
    all(...mixed)
        ~~~~~~~~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'string' is not assignable to type 'number'.
    all(...tuple)
        ~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    prefix("b", ...mixed)
                ~~~~~~~~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'string' is not assignable to type 'number'.
    prefix("c", ...tuple)
                ~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    rest("e", ...mixed)
              ~~~~~~~~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'string' is not assignable to type 'number'.
    rest("f", ...tuple)
              ~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    prefix(...ns) // required parameters are required
           ~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    prefix(...mixed)
           ~~~~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    prefix(...tuple)
           ~~~~~~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    prefix2("g", ...ns);
                 ~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    